<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/inputTitle"
        android:inputType="textMultiLine"
        android:padding="@dimen/commonMargin"
        tools:text="Название рецепта" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/categoriesMenu"
        style="@style/Widget.AppCompat.CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/input_margin_48"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description"
        app:icon="@drawable/ic_baseline_menu_24"
        tools:text="Категория" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/input_margin_96"
        android:layout_marginStart="@dimen/commonMargin"
        android:background="@android:color/transparent"
        android:hint="@string/inputContent"
        android:inputType="textMultiLine"
        tools:text="Текст рецепта" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_baseline_add_task_48" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>